Fix heading spacing in partner promo component

--- a/frontend/style/components/_components.partner-promo.scss
+++ b/frontend/style/components/_components.partner-promo.scss
@@ -55,6 +55,7 @@
 
 .c-partner-promo__statement-title {
   @include inuit-font-size($font-size-small, $line-height-normal );
+  margin-top: $spacing;
   margin-bottom: 0;
   color: $white;
 }
